crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-ml-6.stderr
TOML parse error at line 1, column 77
  |
1 | bad-uni-esc-ml-6 = """This string contains a non scalar unicode codepoint \uD801"""
  |                                                                             ^
invalid value, expected unicode hexadecimal value
